package chat4all.api.grpc.service;

import chat4all.api.storage.MinioFileStorage;
import chat4all.grpc.generated.v1.*;
import chat4all.shared.tracing.TracingUtils;
import io.grpc.Status;
import io.grpc.stub.StreamObserver;
import io.opentelemetry.api.trace.Span;
import io.opentelemetry.api.trace.Tracer;

import java.io.ByteArrayOutputStream;
import java.io.InputStream;
import java.security.MessageDigest;
import java.util.Map;
import java.util.UUID;
import java.util.concurrent.ConcurrentHashMap;

/**
 * FileServiceImpl - Upload/Download de arquivos com suporte a resumo
 * 
 * IMPLEMENTA:
 * - RF-003: Arquivos at√© 2GB
 * - RF-004: Upload resum√≠vel (chunking)
 * - RNF-008: Distributed tracing
 * 
 * FUNCIONALIDADES:
 * 1. Upload streaming com chunks de at√© 1MB
 * 2. Valida√ß√£o de checksum por chunk
 * 3. Persist√™ncia de progresso (session_id)
 * 4. Retomada de uploads interrompidos
 * 5. Valida√ß√£o de tamanho m√°ximo (2GB)
 * 6. Rastreamento distribu√≠do de uploads
 * 
 * @author Chat4All Team
 * @version 2.0.0 (Upload Resum√≠vel Implementado)
 */
public class FileServiceImpl extends FileServiceGrpc.FileServiceImplBase {
    
    private final MinioFileStorage fileStorage;
    private final Tracer tracer;
    
    // Sess√µes de upload ativas (session_id -> UploadSession)
    private final Map<String, UploadSession> uploadSessions = new ConcurrentHashMap<>();
    
    // Metadados de arquivos (file_id -> FileMetadata)
    // Em produ√ß√£o, usar Cassandra (tabela files)
    private final Map<String, StoredFileMetadata> fileMetadataStore = new ConcurrentHashMap<>();
    
    // Constantes
    private static final long MAX_FILE_SIZE = 2_000_000_000L; // 2GB (RF-003)
    private static final int CHUNK_SIZE = 1_048_576; // 1MB
    private static final int BUFFER_FLUSH_SIZE = 10_485_760; // 10MB - flush to MinIO
    
    public FileServiceImpl(MinioFileStorage fileStorage, Tracer tracer) {
        this.fileStorage = fileStorage;
        this.tracer = tracer;
    }
    
    /**
     * Upload de arquivo com suporte a chunking e resumo
     * 
     * FLUXO:
     * 1. Cliente envia chunks via streaming
     * 2. Servidor valida checksum de cada chunk
     * 3. Persiste progresso (offset)
     * 4. Se interrompido, cliente pode retomar via ResumeUpload
     * 
     * VALIDA√á√ïES (RF-003):
     * - Tamanho total <= 2GB
     * - Checksum correto por chunk
     * - Session v√°lida
     */
    @Override
    public StreamObserver<FileChunk> uploadFile(StreamObserver<UploadFileResponse> responseObserver) {
        return new StreamObserver<FileChunk>() {
            private String sessionId;
            private FileMetadata metadata;
            private java.util.List<byte[]> chunks = new java.util.ArrayList<>();  // Acumula chunks
            private long totalBytesReceived = 0;
            private MessageDigest digest;
            private String tempFileId;
            
            @Override
            public void onNext(FileChunk chunk) {
                try {
                    // Primeiro chunk cont√©m metadata
                    if (chunk.hasMetadata() && metadata == null) {
                        metadata = chunk.getMetadata();
                        sessionId = chunk.getSessionId().isEmpty() 
                            ? "upload_" + UUID.randomUUID().toString() 
                            : chunk.getSessionId();
                        
                        digest = MessageDigest.getInstance("SHA-256");
                        
                        // Valida tamanho do arquivo (RF-003)
                        if (metadata.getSizeBytes() > MAX_FILE_SIZE) {
                            responseObserver.onError(Status.INVALID_ARGUMENT
                                .withDescription("File size " + metadata.getSizeBytes() + 
                                               " exceeds maximum of 2GB")
                                .asRuntimeException());
                            return;
                        }
                        
                        System.out.println("üì§ Starting upload session: " + sessionId);
                        System.out.println("   File: " + metadata.getFilename() + 
                                         " (" + metadata.getSizeBytes() + " bytes)");
                    }
                    
                    // Processa chunk
                    byte[] content = chunk.getContent().toByteArray();
                    
                    // Valida checksum do chunk (RF-004)
                    if (!chunk.getChunkChecksum().isEmpty()) {
                        MessageDigest chunkDigest = MessageDigest.getInstance("SHA-256");
                        byte[] chunkHash = chunkDigest.digest(content);
                        String chunkHashHex = bytesToHex(chunkHash);
                        
                        if (!chunkHashHex.equals(chunk.getChunkChecksum())) {
                            responseObserver.onError(Status.DATA_LOSS
                                .withDescription("Chunk checksum mismatch at offset " + chunk.getOffset())
                                .asRuntimeException());
                            return;
                        }
                    }
                    
                    // Adiciona chunk √† lista (n√£o descarta dados)
                    chunks.add(content);
                    digest.update(content);
                    totalBytesReceived += content.length;
                    
                    // Valida limite durante upload (RF-003)
                    if (totalBytesReceived > MAX_FILE_SIZE) {
                        responseObserver.onError(Status.RESOURCE_EXHAUSTED
                            .withDescription("Upload exceeded 2GB limit")
                            .asRuntimeException());
                        return;
                    }
                    
                    // Persiste progresso (RF-004 - upload resum√≠vel)
                    UploadSession session = uploadSessions.computeIfAbsent(
                        sessionId, 
                        k -> new UploadSession(sessionId, metadata)
                    );
                    session.bytesReceived = totalBytesReceived;
                    session.lastActivity = System.currentTimeMillis();
                    
                    System.out.println("   üì• Received chunk: " + content.length + " bytes " +
                                     "(total: " + totalBytesReceived + "/" + metadata.getSizeBytes() + ")");
                    
                } catch (Exception e) {
                    responseObserver.onError(Status.INTERNAL
                        .withDescription("Error processing chunk: " + e.getMessage())
                        .withCause(e)
                        .asRuntimeException());
                }
            }
            
            @Override
            public void onError(Throwable t) {
                System.err.println("‚ùå Upload error for session " + sessionId + ": " + t.getMessage());
                responseObserver.onError(t);
                
                // Mant√©m sess√£o para poss√≠vel retomada (RF-004)
                if (sessionId != null) {
                    UploadSession session = uploadSessions.get(sessionId);
                    if (session != null) {
                        session.status = "ERROR";
                        System.out.println("   Session preserved for resume: " + sessionId);
                    }
                }
            }
            
            @Override
            public void onCompleted() {
                try {
                    if (metadata == null) {
                        responseObserver.onError(Status.INVALID_ARGUMENT
                            .withDescription("No metadata received")
                            .asRuntimeException());
                        return;
                    }
                    
                    // Calcula checksum final
                    byte[] fileHash = digest.digest();
                    String checksumHex = bytesToHex(fileHash);
                    
                    // Valida checksum do arquivo completo (se fornecido)
                    if (!metadata.getChecksum().isEmpty() && 
                        !checksumHex.equals(metadata.getChecksum())) {
                        responseObserver.onError(Status.DATA_LOSS
                            .withDescription("File checksum mismatch. Expected: " + 
                                           metadata.getChecksum() + ", Got: " + checksumHex)
                            .asRuntimeException());
                        return;
                    }
                    
                    // Reconstr√≥i arquivo completo a partir dos chunks
                    System.out.println("   üîÑ Reassembling " + chunks.size() + " chunks into complete file...");
                    byte[] fileBytes = new byte[(int)totalBytesReceived];
                    int offset = 0;
                    for (byte[] chunkData : chunks) {
                        System.arraycopy(chunkData, 0, fileBytes, offset, chunkData.length);
                        offset += chunkData.length;
                    }
                    System.out.println("   ‚úì File reassembled: " + fileBytes.length + " bytes");
                    
                    // Salva no MinIO
                    String fileId = "file_" + UUID.randomUUID().toString();
                    MinioFileStorage.UploadResult result = fileStorage.uploadFile(
                        metadata.getFilename(),
                        fileBytes,
                        metadata.getMimeType(),
                        metadata.getConversationId()
                    );
                    
                    // Remove sess√£o conclu√≠da
                    uploadSessions.remove(sessionId);
                    
                    // Salvar metadados (em produ√ß√£o, Cassandra)
                    fileMetadataStore.put(result.getFileId(), new StoredFileMetadata(
                        result.getFileId(),
                        metadata.getFilename(),
                        totalBytesReceived,
                        metadata.getMimeType(),
                        checksumHex,
                        result.getStoragePath(),
                        metadata.getConversationId()
                    ));
                    
                    System.out.println("‚úÖ Upload completed: " + result.getFileId());
                    System.out.println("   Size: " + totalBytesReceived + " bytes");
                    System.out.println("   Checksum: " + checksumHex);
                    System.out.println("   Storage: " + result.getStoragePath());
                    
                    // Resposta
                    UploadFileResponse response = UploadFileResponse.newBuilder()
                        .setFileId(result.getFileId())
                        .setFilename(metadata.getFilename())
                        .setSizeBytes(totalBytesReceived)
                        .setChecksum(checksumHex)
                        .setStoragePath(result.getStoragePath())
                        .build();
                    
                    responseObserver.onNext(response);
                    responseObserver.onCompleted();
                    
                } catch (Exception e) {
                    responseObserver.onError(Status.INTERNAL
                        .withDescription("Error completing upload: " + e.getMessage())
                        .withCause(e)
                        .asRuntimeException());
                }
            }
        };
    }
    
    /**
     * Retomar upload interrompido (RF-004)
     * 
     * Cliente pode consultar progresso e continuar de onde parou
     */
    @Override
    public void resumeUpload(ResumeUploadRequest request, 
                            StreamObserver<ResumeUploadResponse> responseObserver) {
        String sessionId = request.getSessionId();
        UploadSession session = uploadSessions.get(sessionId);
        
        if (session == null) {
            // Sess√£o n√£o encontrada ou expirada
            ResumeUploadResponse response = ResumeUploadResponse.newBuilder()
                .setSessionId(sessionId)
                .setBytesUploaded(0)
                .setCanResume(false)
                .build();
            responseObserver.onNext(response);
            responseObserver.onCompleted();
            return;
        }
        
        // Verifica se sess√£o ainda √© v√°lida (24h)
        long age = System.currentTimeMillis() - session.lastActivity;
        boolean canResume = age < 86400000; // 24 horas
        
        if (!canResume) {
            uploadSessions.remove(sessionId);
        }
        
        System.out.println("üîÑ Resume request for session: " + sessionId);
        System.out.println("   Bytes uploaded: " + session.bytesReceived);
        System.out.println("   Can resume: " + canResume);
        
        ResumeUploadResponse response = ResumeUploadResponse.newBuilder()
            .setSessionId(sessionId)
            .setBytesUploaded(session.bytesReceived)
            .setCanResume(canResume)
            .build();
        
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }
    
    /**
     * Download de arquivo em chunks (RF-004)
     * 
     * Streaming do MinIO para o cliente
     */
    @Override
    public void downloadFile(DownloadFileRequest request, StreamObserver<FileChunk> responseObserver) {
        try {
            String fileId = request.getFileId();
            
            // Consultar metadados (em produ√ß√£o, Cassandra)
            StoredFileMetadata metadata = fileMetadataStore.get(fileId);
            if (metadata == null) {
                responseObserver.onError(Status.NOT_FOUND
                    .withDescription("File not found: " + fileId)
                    .asRuntimeException());
                return;
            }
            
            System.out.println("üì• Starting download: " + fileId);
            System.out.println("   File: " + metadata.filename);
            System.out.println("   Size: " + metadata.sizeBytes + " bytes");
            
            // Download do MinIO usando storage_path
            InputStream inputStream = fileStorage.downloadFileByPath(metadata.storagePath);
            
            // Enviar em chunks de 1MB
            byte[] buffer = new byte[CHUNK_SIZE];
            int bytesRead;
            long totalSent = 0;
            
            while ((bytesRead = inputStream.read(buffer)) != -1) {
                byte[] chunk = bytesRead < CHUNK_SIZE 
                    ? java.util.Arrays.copyOf(buffer, bytesRead) 
                    : buffer;
                
                FileChunk fileChunk = FileChunk.newBuilder()
                    .setContent(com.google.protobuf.ByteString.copyFrom(chunk))
                    .setOffset(totalSent)
                    .build();
                
                responseObserver.onNext(fileChunk);
                totalSent += bytesRead;
                
                if (totalSent % (10 * CHUNK_SIZE) == 0) {
                    System.out.println("   üì§ Sent: " + totalSent + "/" + metadata.sizeBytes + " bytes");
                }
            }
            
            inputStream.close();
            
            System.out.println("‚úÖ Download completed: " + totalSent + " bytes");
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            System.err.println("‚ùå Download error: " + e.getMessage());
            responseObserver.onError(Status.INTERNAL
                .withDescription("Error downloading file: " + e.getMessage())
                .withCause(e)
                .asRuntimeException());
        }
    }
    
    /**
     * Consultar metadados de arquivo (RF-004)
     */
    @Override
    public void getFileMetadata(GetFileMetadataRequest request, 
                               StreamObserver<FileMetadata> responseObserver) {
        try {
            String fileId = request.getFileId();
            
            // Consultar metadados (em produ√ß√£o, Cassandra)
            StoredFileMetadata stored = fileMetadataStore.get(fileId);
            if (stored == null) {
                responseObserver.onError(Status.NOT_FOUND
                    .withDescription("File not found: " + fileId)
                    .asRuntimeException());
                return;
            }
            
            FileMetadata metadata = FileMetadata.newBuilder()
                .setFilename(stored.filename)
                .setSizeBytes(stored.sizeBytes)
                .setMimeType(stored.mimeType)
                .setChecksum(stored.checksum)
                .setConversationId(stored.conversationId)
                .build();
            
            responseObserver.onNext(metadata);
            responseObserver.onCompleted();
            
        } catch (Exception e) {
            responseObserver.onError(Status.INTERNAL
                .withDescription("Error retrieving metadata: " + e.getMessage())
                .asRuntimeException());
        }
    }
    
    /**
     * Converte bytes para hexadecimal
     */
    private static String bytesToHex(byte[] bytes) {
        StringBuilder sb = new StringBuilder();
        for (byte b : bytes) {
            sb.append(String.format("%02x", b));
        }
        return sb.toString();
    }
    
    /**
     * Metadados de arquivo armazenado
     * Em produ√ß√£o, seria tabela Cassandra
     */
    private static class StoredFileMetadata {
        final String fileId;
        final String filename;
        final long sizeBytes;
        final String mimeType;
        final String checksum;
        final String storagePath;
        final String conversationId;
        
        StoredFileMetadata(String fileId, String filename, long sizeBytes, 
                          String mimeType, String checksum, String storagePath,
                          String conversationId) {
            this.fileId = fileId;
            this.filename = filename;
            this.sizeBytes = sizeBytes;
            this.mimeType = mimeType;
            this.checksum = checksum;
            this.storagePath = storagePath;
            this.conversationId = conversationId;
        }
    }
    
    /**
     * Classe interna para rastrear sess√µes de upload
     */
    private static class UploadSession {
        final String sessionId;
        final FileMetadata metadata;
        long bytesReceived;
        long lastActivity;
        String status;
        
        UploadSession(String sessionId, FileMetadata metadata) {
            this.sessionId = sessionId;
            this.metadata = metadata;
            this.bytesReceived = 0;
            this.lastActivity = System.currentTimeMillis();
            this.status = "IN_PROGRESS";
        }
    }
}
